add more changes

--- a/Data_Pre_Processing/check_instance_mask_shape.ipynb
+++ b/Data_Pre_Processing/check_instance_mask_shape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,15 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600, 600, 2)\n",
+      "(600, 600, 2)\n",
+      "(600, 600, 2)\n",
+      "(600, 600, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = ProstateDataset(dataset_dir)\n",
     "mode = 16\n",
-    "for image_id in range(513):\n",
-    "    for patch in range(mode):\n",
+    "for image_id in range(1):\n",
+    "    for patch in range(12,16):\n",
     "        mask, class_ids = dataset.read_instance_ann(image_id, mode = mode, patch = patch)\n",
+    "        print(mask.shape)\n",
     "        if [mask.shape[0], mask.shape[1]] != [600, 600]:\n",
     "            print(\"Prostate instance mask %d - %d doesn't match!\" %(image_id, patch))"
    ]
