modified tumor_class_loss and network

--- a/Data_Pre_Processing/check_instance_mask_shape.ipynb
+++ b/Data_Pre_Processing/check_instance_mask_shape.ipynb
@@ -38,27 +38,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(600, 600, 2)\n",
-      "(600, 600, 2)\n",
-      "(600, 600, 2)\n",
-      "(600, 600, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# dataset = ProstateDataset(dataset_dir)\n",
+    "# mode = 16\n",
+    "# for image_id in range(1):\n",
+    "#     for patch in range(12,16):\n",
+    "#         mask, class_ids = dataset.read_instance_ann(image_id, mode = mode, patch = patch)\n",
+    "#         print(mask.shape)\n",
+    "#         if [mask.shape[0], mask.shape[1]] != [600, 600]:\n",
+    "#             print(\"Prostate instance mask %d - %d doesn't match!\" %(image_id, patch))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dataset = ProstateDataset(dataset_dir)\n",
-    "mode = 16\n",
-    "for image_id in range(1):\n",
-    "    for patch in range(12,16):\n",
-    "        mask, class_ids = dataset.read_instance_ann(image_id, mode = mode, patch = patch)\n",
-    "        print(mask.shape)\n",
-    "        if [mask.shape[0], mask.shape[1]] != [600, 600]:\n",
-    "            print(\"Prostate instance mask %d - %d doesn't match!\" %(image_id, patch))"
+    "for image_id in range(513):\n",
+    "    for patch in range(16):\n",
+    "        image = dataset.read_image(image_id, dir_name = '/tiles_16', patch_num = patch)\n",
+    "        if [image.shape[0], image.shape[1]] != [600, 600]:\n",
+    "            print(\"Prostate image %d - %d doesn't match!\" %(image_id, patch))"
    ]
   },
   {
