--- a/Data_Pre_Processing/image_ann_mirrow_crop.ipynb
+++ b/Data_Pre_Processing/image_ann_mirrow_crop.ipynb
@@ -70,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dataset_dir = os.path.join(os.getcwd(), 'cedars-224')\n",
@@ -88,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "image_id = 0\n",
@@ -126,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
