--- a/Data_Pre_Processing/image_mirror_crop.ipynb
+++ b/Data_Pre_Processing/image_mirror_crop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -46,36 +46,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def _image_padding(img_org):\n",
-    "        img_pad = np.lib.pad(img_org, ((150,50),(150,150), (0, 0)), 'symmetric')\n",
+    "        img_pad = np.lib.pad(img_org, ((150,150),(150,150), (0, 0)), 'symmetric')\n",
     "        return img_pad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dataset_dir = os.path.join(os.getcwd(), 'cedars-224')\n",
+    "# dataset_dir = os.path.join(os.getcwd(), 'cedars-224')\n",
+    "dataset_dir = \"/data/wenyuan/Mask-RCNN/Mask-RCNN-Path/Data_Pre_Processing/\"\n",
     "data = ProstateDataset(dataset_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "start_id = 5\n",
+    "start_id = 0\n",
     "end_id = 513\n",
     "for image_id in range(start_id, end_id):\n",
     "    image_org = data.read_image(image_id)\n",
@@ -85,12 +88,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## test code for a single image\n",
+    "# image_id = 0\n",
+    "# image_org = data.read_image(image_id)\n",
+    "# image_pad = _image_padding(image_org)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1501, 1501, 3) (1201, 1201, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(image_pad.shape, image_org.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# _= _crop_split_image(image_pad, height = 600, width = 600, image_id = image_id, save = True)"
+   ]
   }
  ],
  "metadata": {
