modified tumor_class prediction

--- a/Mask_RCNN/prostate_evaluation_mode16.ipynb
+++ b/Mask_RCNN/prostate_evaluation_mode16.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -30,7 +38,7 @@
     "\n",
     "# GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +80,7 @@
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 194.05923719  121.10764634  183.85822645]\n",
+      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
       "NAME                           prostate\n",
       "NUM_CLASSES                    4\n",
@@ -90,17 +98,18 @@
       "TRAIN_ROIS_PER_IMAGE           200\n",
       "USE_MINI_MASK                  True\n",
       "USE_RPN_ROIS                   True\n",
-      "VALIDATION_STEPS               5\n",
+      "USE_TUMORCLASS                 True\n",
+      "VALIDATION_STEPS               50\n",
       "WEIGHT_DECAY                   0.0001\n",
       "\n",
       "\n",
-      "Loading weights from  /scratch/wenyuan/Mask-RCNN/Mask-RCNN-org/Mask_RCNN/logs/prostate20180206T1953-held-out-2/mask_rcnn_prostate_0080.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554/mask_rcnn_prostate_0070.h5\n"
      ]
     }
    ],
    "source": [
-    "dataset_dir = \"/scratch/wenyuan/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
-    "held_out_set = 2\n",
+    "dataset_dir = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
+    "held_out_set = 4\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set) # take out the mean pixel for specific held_out_set\n",
     "\n",
     "class InferenceConfig(prostate.ProstateConfig):\n",
@@ -121,8 +130,8 @@
     "\n",
     "# model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
     "# model_path = model.find_last()[1]\n",
-    "model_path = model.find_specific(epoch = 80, held_out_set = held_out_set)[1]\n",
-    "# model_path = model.find_specific(epoch = 40)[1]\n",
+    "# model_path = model.find_specific(epoch = 80, held_out_set = held_out_set)[1]\n",
+    "model_path = model.find_specific(epoch = 70)[1]\n",
     "\n",
     "# Load trained weights (fill in path to trained weights here)\n",
     "assert model_path != \"\", \"Provide path to trained weights\"\n",
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -256,35 +265,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done evaluating 80 / 1632!\n",
-      "Done evaluating 160 / 1632!\n",
-      "Done evaluating 240 / 1632!\n",
-      "Done evaluating 320 / 1632!\n",
-      "Done evaluating 400 / 1632!\n",
-      "Done evaluating 480 / 1632!\n",
-      "Done evaluating 560 / 1632!\n",
-      "Done evaluating 640 / 1632!\n",
-      "Done evaluating 720 / 1632!\n",
-      "Done evaluating 800 / 1632!\n",
-      "Done evaluating 880 / 1632!\n",
-      "Done evaluating 960 / 1632!\n",
-      "Done evaluating 1040 / 1632!\n",
-      "Done evaluating 1120 / 1632!\n",
-      "Done evaluating 1200 / 1632!\n",
-      "Done evaluating 1280 / 1632!\n",
-      "Done evaluating 1360 / 1632!\n",
-      "Done evaluating 1440 / 1632!\n",
-      "Done evaluating 1520 / 1632!\n",
-      "Done evaluating 1600 / 1632!\n",
-      "mIOU:  0.670473847865 \n",
-      "IOU: [0.72224834205830057, 0.61215965980319054, 0.69954058834569599, 0.64794680125461313]\n"
+      "Done evaluating 80 / 1648!\n",
+      "Done evaluating 160 / 1648!\n",
+      "Done evaluating 240 / 1648!\n",
+      "Done evaluating 320 / 1648!\n",
+      "Done evaluating 400 / 1648!\n",
+      "Done evaluating 480 / 1648!\n",
+      "Done evaluating 560 / 1648!\n",
+      "Done evaluating 640 / 1648!\n",
+      "Done evaluating 720 / 1648!\n",
+      "Done evaluating 800 / 1648!\n",
+      "Done evaluating 880 / 1648!\n",
+      "Done evaluating 960 / 1648!\n",
+      "Done evaluating 1040 / 1648!\n",
+      "Done evaluating 1120 / 1648!\n",
+      "Done evaluating 1200 / 1648!\n",
+      "Done evaluating 1280 / 1648!\n",
+      "Done evaluating 1360 / 1648!\n",
+      "Done evaluating 1440 / 1648!\n",
+      "Done evaluating 1520 / 1648!\n",
+      "Done evaluating 1600 / 1648!\n",
+      "mIOU:  0.682612452359 \n",
+      "IOU: [0.7024491890225385, 0.65283656483892538, 0.69198332023366893, 0.68318073534275736]\n"
      ]
     }
    ],
@@ -342,19 +351,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 39530656.   1339555.   8716009.    950943.]\n",
-      " [   886599.   8068923.   1429363.    118181.]\n",
-      " [  2677127.    894648.  34361433.    149507.]\n",
-      " [   631886.    443807.    891912.   5864203.]]\n",
-      "mIOU:  0.670473847865 \n",
-      "IOU: [0.72224834205830057, 0.61215965980319054, 0.69954058834569599, 0.64794680125461313]\n"
+      "[[ 38901955.   1836547.   8672610.   2166310.]\n",
+      " [  1010767.  11031535.   1807173.    313033.]\n",
+      " [  2516889.    628617.  31208719.     84748.]\n",
+      " [   275376.    270179.    181636.   7097234.]]\n",
+      "mIOU:  0.682612452359 \n",
+      "IOU: [0.7024491890225385, 0.65283656483892538, 0.69198332023366893, 0.68318073534275736]\n"
      ]
     }
    ],
@@ -366,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
