--- a/Mask_RCNN/Train_prostate_mode16.ipynb
+++ b/Mask_RCNN/Train_prostate_mode16.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1, 2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Training dataset\n",
-    "subset_1 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "subset_1 = [3]\n",
     "dataset_train = prostate.ProstateDataset()\n",
     "dataset_train.load_prostate(dataset_dir, subset_1, mode = 16)\n",
     "dataset_train.prepare() # prepare the dataset class for use\n",
@@ -351,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.train(dataset_train, dataset_val,\n",
@@ -363,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.train(dataset_train, dataset_val,\n",
