--- a/Mask_RCNN/Train_prostate_mode16.ipynb
+++ b/Mask_RCNN/Train_prostate_mode16.ipynb
@@ -351,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.train(dataset_train, dataset_val,\n",
@@ -363,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.train(dataset_train, dataset_val,\n",
@@ -398,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
