--- a/ResNet/train_test.ipynb
+++ b/ResNet/train_test.ipynb
@@ -33,6 +33,10 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
+    "# GPU to use\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
     "\n",
@@ -40,12 +44,93 @@
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
     "\n",
     "# Local path to trained weights file\n",
-    "COCO_MODEL_PATH = \"/Users/wenyuan/Documents/MII/Mask_RCNN_On_Pathology/Mask_RCNN/mask_rcnn_coco.h5\""
+    "COCO_MODEL_PATH = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/mask_rcnn_coco.h5\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import prostate\n",
+    "dataset_dir = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
+    "# held_out_set = 4\n",
+    "# mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
+    "# class TrainConfig(prostate.ProstateConfig):\n",
+    "#             MEAN_PIXEL = np.array(mean_pixel)\n",
+    "# config = TrainConfig()\n",
+    "# config.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# subset_1 = [0, 3]\n",
+    "# dataset_train = prostate.ProstateDataset()\n",
+    "# dataset_train.load_prostate(dataset_dir, subset_1, mode = 16)\n",
+    "# dataset_train.prepare() # prepare the dataset class for use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create model in training mode\n",
+    "# model = modellib.ResNet_Classifier(mode=\"training\", config=config,\n",
+    "#                           model_dir=MODEL_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# exclude = []\n",
+    "# if config.USE_TUMORCLASS:\n",
+    "#     tumor_head = [\"tumor_class_conv1\", \"tumor_class_bn1\", \"tumor_class_conv2\",\n",
+    "#                  \"tumor_class_conv2\", \"tumor_class_bn2\", \"tumor_class_logits\", \"tumor_class\"]\n",
+    "#     exclude = exclude + tumor_head\n",
+    "\n",
+    "# model.load_weights(COCO_MODEL_PATH, by_name=True,\n",
+    "#                        exclude=exclude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Train the head branches\n",
+    "# Passing layers=\"heads\" freezes all layers except the head\n",
+    "# layers. You can also pass a regular expression to select\n",
+    "# which layers to train by name pattern.\n",
+    "# model.train(dataset_train, dataset_train, \n",
+    "#             learning_rate=config.LEARNING_RATE, \n",
+    "#             epochs=5, \n",
+    "#             layers='heads')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +145,13 @@
       " [ 16  16]\n",
       " [  8   8]]\n",
       "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     4\n",
+      "BATCH_SIZE                     1\n",
       "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
       "DETECTION_MAX_INSTANCES        100\n",
-      "DETECTION_MIN_CONFIDENCE       0.7\n",
-      "DETECTION_NMS_THRESHOLD        0.99\n",
+      "DETECTION_MIN_CONFIDENCE       0\n",
+      "DETECTION_NMS_THRESHOLD        0.7\n",
       "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 4\n",
+      "IMAGES_PER_GPU                 1\n",
       "IMAGE_MAX_DIM                  512\n",
       "IMAGE_MIN_DIM                  512\n",
       "IMAGE_PADDING                  True\n",
@@ -103,57 +188,23 @@
     }
    ],
    "source": [
-    "import prostate\n",
-    "dataset_dir = \"/Users/wenyuan/Documents/MII/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
     "held_out_set = 4\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
-    "class TrainConfig(prostate.ProstateConfig):\n",
-    "            MEAN_PIXEL = np.array(mean_pixel)\n",
-    "config = TrainConfig()\n",
-    "config.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "subset_1 = [0, 3]\n",
-    "dataset_train = prostate.ProstateDataset()\n",
-    "dataset_train.load_prostate(dataset_dir, subset_1, mode = 16)\n",
-    "dataset_train.prepare() # prepare the dataset class for use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create model in training mode\n",
-    "model = modellib.ResNet_Classifier(mode=\"training\", config=config,\n",
-    "                          model_dir=MODEL_DIR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "exclude = []\n",
-    "if config.USE_TUMORCLASS:\n",
-    "    tumor_head = [\"tumor_class_conv1\", \"tumor_class_bn1\", \"tumor_class_conv2\",\n",
-    "                 \"tumor_class_conv2\", \"tumor_class_bn2\", \"tumor_class_logits\", \"tumor_class\"]\n",
-    "    exclude = exclude + tumor_head\n",
+    "class InferenceConfig(prostate.ProstateConfig):\n",
+    "    GPU_COUNT = 1\n",
+    "    IMAGES_PER_GPU = 1\n",
+    "    DETECTION_MIN_CONFIDENCE = 0\n",
+    "    DETECTION_NMS_THRESHOLD = 0.7     \n",
+    "    MEAN_PIXEL = np.array(mean_pixel)\n",
+    "    IMAGE_MIN_DIM = 512\n",
+    "    IMAGE_MAX_DIM = 512\n",
     "\n",
-    "model.load_weights(COCO_MODEL_PATH, by_name=True,\n",
-    "                       exclude=exclude)"
+    "inference_config = InferenceConfig()\n",
+    "inference_config.display()\n",
+    "# Recreate the model in inference mode\n",
+    "model = modellib.ResNet_Classifier(mode=\"inference\", \n",
+    "                          config=inference_config,\n",
+    "                          model_dir=MODEL_DIR)"
    ]
   },
   {
@@ -162,26 +213,64 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "train() got an unexpected keyword argument 'learning_rate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-0f57d0706e8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLEARNING_RATE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             layers='heads')\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: train() got an unexpected keyword argument 'learning_rate'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/ResNet/logs/prostate20180227T2229/mask_rcnn_prostate_0040.h5\n"
      ]
     }
    ],
    "source": [
-    "# Train the head branches\n",
-    "# Passing layers=\"heads\" freezes all layers except the head\n",
-    "# layers. You can also pass a regular expression to select\n",
-    "# which layers to train by name pattern.\n",
-    "model.train(dataset_train, dataset_train, \n",
-    "            learning_rate=config.LEARNING_RATE, \n",
-    "            epochs=5, \n",
-    "            layers='heads')"
+    "model_path = model.find_last()[1]\n",
+    "# Load trained weights (fill in path to trained weights here)\n",
+    "assert model_path != \"\", \"Provide path to trained weights\"\n",
+    "print(\"Loading weights from \", model_path)\n",
+    "model.load_weights(model_path, by_name=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "subset_1 = [x for x in range(513)]\n",
+    "dataset_test = prostate.ProstateDataset()\n",
+    "dataset_test.load_prostate(dataset_dir, subset_1, mode = 16)\n",
+    "dataset_test.prepare() # prepare the dataset class for use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [[ 0.94721711  0.05278282]] 143.875 14\n",
+      "0 [[  6.92648030e-07   9.99999285e-01]] 153.25 4\n",
+      "0 [[ 0.22550039  0.7744996 ]] 243.1875 3\n",
+      "1 [[ 0.98100233  0.0189977 ]] 277.8125 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image_id in dataset_test.image_ids:\n",
+    "    # Load image and ground truth data\n",
+    "    image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
+    "        modellib.load_image_gt(dataset_test, inference_config,\n",
+    "                               image_id, use_mini_mask=False)\n",
+    "    tumor_class_gt = 1 \\\n",
+    "    if (sum(gt_class_id)) else 0\n",
+    "    \n",
+    "    # Run object detection\n",
+    "    results = model.detect([image], verbose=0)\n",
+    "    if (np.argmax(results[0]) != tumor_class_gt):\n",
+    "        print(tumor_class_gt, results, image_id / 16, image_id % 16)"
    ]
   },
   {
@@ -210,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
