--- a/ResNet/h5file_manipulation.ipynb
+++ b/ResNet/h5file_manipulation.ipynb
@@ -62,6 +62,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pre_t_f = h5py.File(pre_t_filepath, mode='r+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tumor_class_bn1\n",
+      "tumor_class_bn2\n",
+      "tumor_class_conv1\n",
+      "tumor_class_conv2\n",
+      "tumor_class_flatten\n",
+      "tumor_class_logits\n",
+      "tumor_class_loss\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in pre_t_f:\n",
+    "    if name.startswith('tumor'):\n",
+    "        print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -83,7 +119,7 @@
     }
    ],
    "source": [
-    "combine_tumor_classifier(pre_t_filepath, resnet_filepath)"
+    "# combine_tumor_classifier(pre_t_filepath, resnet_filepath)"
    ]
   },
   {
