find all stroma

--- a/Mask_RCNN/Prostate_detection_mode16_threshold.ipynb
+++ b/Mask_RCNN/Prostate_detection_mode16_threshold.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "# GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,16 +98,17 @@
       "TRAIN_ROIS_PER_IMAGE           200\n",
       "USE_MINI_MASK                  True\n",
       "USE_RPN_ROIS                   True\n",
-      "VALIDATION_STEPS               5\n",
+      "USE_TUMORCLASS                 True\n",
+      "VALIDATION_STEPS               50\n",
       "WEIGHT_DECAY                   0.0001\n",
       "\n",
       "\n",
-      "Loading weights from  /scratch/wenyuan/Mask-RCNN/Mask-RCNN-org/Mask_RCNN/logs/prostate20180201T1916/mask_rcnn_prostate_0087.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
    "source": [
-    "dataset_dir = \"/scratch/wenyuan/Mask-RCNN/Data_Pre_Processing/cedars-224\"\n",
+    "dataset_dir = \"/scratch/wenyuan/Mask_RCNN_On_Pathology/Data_Pre_Processing/cedars-224\"\n",
     "held_out_set = 4\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "class InferenceConfig(prostate.ProstateConfig):\n",
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -258,18 +259,18 @@
     "dataset_val = prostate.ProstateDataset()\n",
     "_, val_list = dataset_val.generator_patition(dataset_dir, held_out_set)\n",
     "# val_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "exclude_list = [394, 185, 506, 289, 360, 7, 222, 406,\\\n",
-    "               152, 195, 219, 510, 196, 399, 237, 41,\\\n",
-    "               44, 274, 423, 432, 207, 371, 463, 482,\\\n",
-    "               176, 50, 494]\n",
-    "val_list = [image for image in val_list if image not in exclude_list]\n",
+    "# exclude_list = [394, 185, 506, 289, 360, 7, 222, 406,\\\n",
+    "#                152, 195, 219, 510, 196, 399, 237, 41,\\\n",
+    "#                44, 274, 423, 432, 207, 371, 463, 482,\\\n",
+    "#                176, 50, 494]\n",
+    "# val_list = [image for image in val_list if image not in exclude_list]\n",
     "dataset_val.load_prostate(dataset_dir, val_list, mode = 16)\n",
     "dataset_val.prepare()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,141 +278,107 @@
      "output_type": "stream",
      "text": [
       "Done evaluating image : 16 !\n",
-      "Number of image is: 154\n",
-      "mIOU:  0.299705491521 IOU: [0.55768216096569123, 0.0, 0.64113980511985724, 0]\n",
       "Done evaluating image : 32 !\n",
-      "Number of image is: 337\n",
-      "mIOU:  0.180733680725 IOU: [0.72293472290039062, 0, 0.0, 0.0]\n",
+      "Number of image is: 154\n",
+      "mIOU:  0.311874938291 IOU: [0.59567049534779537, 0.0010048189221607288, 0.65082443889518071, 0]\n",
       "Done evaluating image : 48 !\n",
-      "Number of image is: 275\n",
-      "mIOU:  0.500518282305 IOU: [0.82185472778377566, 0.29257620041753651, 0.88764220101761171, 0]\n",
       "Done evaluating image : 64 !\n",
-      "Number of image is: 166\n",
-      "mIOU:  0.519623848189 IOU: [0.88814077732380758, 0.0, 0.50173006353910488, 0.68862455189447869]\n",
+      "Number of image is: 185\n",
+      "mIOU:  0.309682759514 IOU: [0.35626443337692332, 0, 0.88230558056617814, 0.00016102411336097581]\n",
       "Done evaluating image : 96 !\n",
       "Done evaluating image : 112 !\n",
       "Done evaluating image : 128 !\n",
-      "Number of image is: 184\n",
-      "mIOU:  0.351646703984 IOU: [0.71935473025755015, 0.68723208567909266, 0.0, 0.0]\n",
       "Done evaluating image : 144 !\n",
-      "Number of image is: 331\n",
-      "mIOU:  0.338187728106 IOU: [0.73599447553144537, 0, 0.61675643689395643, 0.0]\n",
       "Done evaluating image : 176 !\n",
       "Done evaluating image : 192 !\n",
       "Done evaluating image : 208 !\n",
       "Done evaluating image : 224 !\n",
-      "Number of image is: 262\n",
-      "mIOU:  0.168315887451 IOU: [0.6732635498046875, 0, 0.0, 0]\n",
       "Done evaluating image : 256 !\n",
       "Done evaluating image : 272 !\n",
-      "Number of image is: 496\n",
-      "mIOU:  0.368135732267 IOU: [0.70745768302833401, 0.0, 0, 0.76508524604154371]\n",
       "Done evaluating image : 288 !\n",
-      "Number of image is: 260\n",
-      "mIOU:  0.151559829712 IOU: [0.60623931884765625, 0, 0.0, 0]\n",
       "Done evaluating image : 304 !\n",
-      "Number of image is: 5\n",
-      "mIOU:  0.493138380056 IOU: [0.31953752985403722, 0.0, 0.83626112267187669, 0.81675486769845229]\n",
-      "Number of image is: 240\n",
-      "mIOU:  0.537029100623 IOU: [0.77423791482089577, 0.0, 0.53691570156698798, 0.83696278610242059]\n",
       "Done evaluating image : 336 !\n",
       "Done evaluating image : 352 !\n",
       "Done evaluating image : 368 !\n",
       "Done evaluating image : 384 !\n",
+      "Number of image is: 7\n",
+      "mIOU:  0.207182060755 IOU: [0.12302101643555098, 0, 0.70570722658499863, 0]\n",
       "Done evaluating image : 416 !\n",
-      "Number of image is: 80\n",
-      "mIOU:  0.327006846401 IOU: [0.5649187261180596, 0.74310865948649474, 0.0, 0.0]\n",
       "Done evaluating image : 432 !\n",
-      "Number of image is: 426\n",
-      "mIOU:  0.370347702585 IOU: [0.57414358762155293, 0, 0.90724722271696279, 0]\n",
       "Done evaluating image : 448 !\n",
-      "Number of image is: 277\n",
-      "mIOU:  0.359163592423 IOU: [0.8667036245369536, 0.56995074515365229, 0.0, 0.0]\n",
+      "Number of image is: 406\n",
+      "mIOU:  0.390425309357 IOU: [0.37694766073857261, 0.15576586381488666, 0.55460841768779967, 0.47437929518476524]\n",
       "Done evaluating image : 464 !\n",
-      "Number of image is: 124\n",
-      "mIOU:  0.315736166217 IOU: [0.38580562331493129, 0, 0.87713904155323852, 0]\n",
       "Done evaluating image : 496 !\n",
-      "Number of image is: 162\n",
-      "mIOU:  0.349747317647 IOU: [0.73712803099342927, 0.6618612395929695, 0.0, 0]\n",
       "Done evaluating image : 512 !\n",
-      "Number of image is: 288\n",
-      "mIOU:  0.36844228918 IOU: [0.53395834443083157, 0.0, 0.93981081228829255, 0]\n",
       "Done evaluating image : 528 !\n",
-      "Number of image is: 251\n",
-      "mIOU:  0.322292016972 IOU: [0.8386610096801862, 0.0, 0.45050705820750381, 0]\n",
       "Done evaluating image : 544 !\n",
       "Done evaluating image : 576 !\n",
       "Done evaluating image : 592 !\n",
       "Done evaluating image : 608 !\n",
-      "Number of image is: 465\n",
-      "mIOU:  0.306724805466 IOU: [0.87359996224461323, 0.35329925961801029, 0.0, 0.0]\n",
       "Done evaluating image : 624 !\n",
-      "Number of image is: 72\n",
-      "mIOU:  0.334867813011 IOU: [0.59003602842360259, 0, 0.74943522362030424, 0]\n",
       "Done evaluating image : 656 !\n",
-      "Number of image is: 187\n",
-      "mIOU:  0.374647401712 IOU: [0.597514251004579, 0, 0.90107535584522402, 0]\n",
       "Done evaluating image : 672 !\n",
-      "Number of image is: 284\n",
-      "mIOU:  0.620254457262 IOU: [0.72421934573286539, 0.49882651225737928, 0.69724178665912218, 0.56073018439688682]\n",
       "Done evaluating image : 688 !\n",
-      "Number of image is: 342\n",
-      "mIOU:  0.476900349017 IOU: [0.85799929712856349, 0.27115749841735248, 0.77844460052140285, 0]\n",
       "Done evaluating image : 704 !\n",
-      "Number of image is: 115\n",
-      "mIOU:  0.341766423977 IOU: [0.50959563103471894, 0, 0.85747006487289001, 0.0]\n",
       "Done evaluating image : 736 !\n",
       "Done evaluating image : 752 !\n",
       "Done evaluating image : 768 !\n",
-      "Number of image is: 139\n",
-      "mIOU:  0.48919763759 IOU: [0.45748722398997205, 0.83071158936545919, 0, 0.66859173700577523]\n",
+      "Number of image is: 196\n",
+      "mIOU:  0.226449384671 IOU: [0.20441523519934648, 0.0, 0.70138230348412578, 0]\n",
       "Done evaluating image : 784 !\n",
       "Done evaluating image : 816 !\n",
-      "Number of image is: 40\n",
-      "mIOU:  0.149618625641 IOU: [0.59847450256347656, 0, 0.0, 0.0]\n",
       "Done evaluating image : 832 !\n",
       "Done evaluating image : 848 !\n",
       "Done evaluating image : 864 !\n",
-      "Number of image is: 503\n",
-      "mIOU:  0.477578009926 IOU: [0.75659189583852238, 0.0, 0.26812516682750548, 0.88559497703925472]\n",
-      "Number of image is: 77\n",
-      "mIOU:  0.330791729968 IOU: [0.59780156671314755, 0, 0.72536535315905248, 0]\n",
       "Done evaluating image : 896 !\n",
-      "Number of image is: 350\n",
-      "mIOU:  0.321798255679 IOU: [0.74240348423010916, 0.54478953848424772, 0.0, 0.0]\n",
       "Done evaluating image : 912 !\n",
       "Done evaluating image : 928 !\n",
       "Done evaluating image : 944 !\n",
-      "Number of image is: 430\n",
-      "mIOU:  0.338446942604 IOU: [0.68133055326577119, 0.67245721714942253, 0.0, 0.0]\n",
       "Done evaluating image : 976 !\n",
-      "Number of image is: 294\n",
-      "mIOU:  0.363429636998 IOU: [0.57192216330350076, 0.0, 0.8817963846901794, 0]\n",
       "Done evaluating image : 992 !\n",
-      "Number of image is: 12\n",
-      "mIOU:  0.547972501258 IOU: [0.87637237336472651, 0.47432709314747035, 0.0, 0.84119053851990222]\n",
       "Done evaluating image : 1008 !\n",
-      "Number of image is: 499\n",
-      "mIOU:  0.172365665436 IOU: [0.68946266174316406, 0, 0.0, 0.0]\n",
       "Done evaluating image : 1024 !\n",
       "Done evaluating image : 1056 !\n",
       "Done evaluating image : 1072 !\n",
+      "Number of image is: 139\n",
+      "mIOU:  0.331822721496 IOU: [0.4483463649167112, 0.76183166858581264, 0.0, 0.11711285248193894]\n",
       "Done evaluating image : 1088 !\n",
-      "Number of image is: 459\n",
-      "mIOU:  0.332756494661 IOU: [0.65424718613437505, 0, 0.67677879250827644, 0]\n",
       "Done evaluating image : 1104 !\n",
       "Done evaluating image : 1136 !\n",
-      "Number of image is: 312\n",
-      "mIOU:  0.470384252011 IOU: [0.79096110836794564, 0.32926607440391736, 0.7613098252722208, 0]\n",
       "Done evaluating image : 1152 !\n",
-      "Number of image is: 142\n",
-      "mIOU:  0.305019053145 IOU: [0.34773240624121743, 0, 0.8723438063400295, 0]\n",
       "Done evaluating image : 1168 !\n",
-      "Number of image is: 100\n",
-      "mIOU:  0.747983398299 IOU: [0.86599951025465138, 0.55502419264093616, 0.74573441420575182, 0.82517547609526043]\n",
       "Done evaluating image : 1184 !\n",
-      "Number of image is: 128\n",
-      "mIOU:  0.525466991934 IOU: [0.65512895662368109, 0.71400059394871074, 0.0, 0.73273841716243016]\n"
+      "Number of image is: 432\n",
+      "mIOU:  0.22478393875 IOU: [0.065263295028308077, 0, 0.83387245997069137, 0]\n",
+      "Done evaluating image : 1216 !\n",
+      "Done evaluating image : 1232 !\n",
+      "Done evaluating image : 1248 !\n",
+      "Number of image is: 207\n",
+      "mIOU:  0.432724523413 IOU: [0.6160641527522569, 0.39266723617915233, 0.47295049979156872, 0.24921620492830293]\n",
+      "Done evaluating image : 1264 !\n",
+      "Number of image is: 371\n",
+      "mIOU:  0.336720163132 IOU: [0.74857004462491372, 0.059737011939335269, 0.53857359596513299, 0.0]\n",
+      "Done evaluating image : 1296 !\n",
+      "Done evaluating image : 1312 !\n",
+      "Done evaluating image : 1328 !\n",
+      "Done evaluating image : 1344 !\n",
+      "Done evaluating image : 1376 !\n",
+      "Done evaluating image : 1392 !\n",
+      "Number of image is: 50\n",
+      "mIOU:  0.359019703135 IOU: [0.78144324481775596, 0.0010911906885061249, 0.65354437703211743, 0]\n",
+      "Done evaluating image : 1408 !\n",
+      "Done evaluating image : 1424 !\n",
+      "Done evaluating image : 1456 !\n",
+      "Done evaluating image : 1472 !\n",
+      "Done evaluating image : 1488 !\n",
+      "Done evaluating image : 1504 !\n",
+      "Done evaluating image : 1536 !\n",
+      "Done evaluating image : 1552 !\n",
+      "Done evaluating image : 1568 !\n",
+      "Done evaluating image : 1584 !\n",
+      "Done evaluating image : 1616 !\n",
+      "Done evaluating image : 1632 !\n"
      ]
     }
    ],
@@ -437,9 +404,16 @@
     "        # Run object detection\n",
     "        results = model.detect([image], verbose=0)\n",
     "        r = results[0]\n",
-    "        # Convert prediction to sementic mask\n",
-    "        result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\\\n",
-    "        if r['class_ids'].size != 0 else np.zeros((image.shape[0], image.shape[1]))   \n",
+    "        \n",
+    "        if np.argmax(r['tumor_probs']) == 1 and r['class_ids'].size != 0:\n",
+    "            result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\n",
+    "        else:\n",
+    "            result_sementic = np.zeros((image.shape[0], image.shape[1]))    \n",
+    "        \n",
+    "#         # Convert prediction to sementic mask\n",
+    "#         result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\\\n",
+    "#         if r['class_ids'].size != 0 else np.zeros((image.shape[0], image.shape[1]))  \n",
+    "        \n",
     "        pred_mask_whole.append(result_sementic[height_crop[0] : height_crop[1], width_crop[0] : width_crop[1]])\n",
     "    img = combine_2_whole_slide(image_whole, 4, 4)\n",
     "    ann = combine_2_whole_slide(gt_mask_whole, 4, 4)\n",
@@ -456,7 +430,7 @@
     "            temp[yv.astype(int), xv.astype(int)] = c_matrix\n",
     "            c_matrix = temp \n",
     "\n",
-    "    mIOU, IOU, below_th = compute_mIOU(c_matrix, th = 0.75)\n",
+    "    mIOU, IOU, below_th = compute_mIOU(c_matrix, th = 0.50)\n",
     "    if below_th:\n",
     "        print(\"Number of image is:\", val_list[int(image_id / 16)])\n",
     "        print(\"mIOU: \", mIOU, \"IOU:\", IOU)\n",
