--- a/Mask_RCNN/Prostate_evaluation_mode16.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode16.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
       "WEIGHT_DECAY                   0.0001\n",
       "\n",
       "\n",
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554/mask_rcnn_prostate_0070.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
     "# model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
     "# model_path = model.find_last()[1]\n",
     "# model_path = model.find_specific(epoch = 80, held_out_set = held_out_set)[1]\n",
-    "model_path = model.find_specific(epoch = 70)[1]\n",
+    "model_path = model.find_specific(epoch = 71)[1]\n",
     "\n",
     "# Load trained weights (fill in path to trained weights here)\n",
     "assert model_path != \"\", \"Provide path to trained weights\"\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,8 @@
       "Done evaluating 1440 / 1648!\n",
       "Done evaluating 1520 / 1648!\n",
       "Done evaluating 1600 / 1648!\n",
-      "mIOU:  0.682612452359 \n",
-      "IOU: [0.7024491890225385, 0.65283656483892538, 0.69198332023366893, 0.68318073534275736]\n"
+      "mIOU:  0.753683236503 \n",
+      "IOU: [0.81097473487667693, 0.65293691352612993, 0.77341265900744405, 0.77740863860157372]\n"
      ]
     }
    ],
@@ -317,9 +317,16 @@
     "    # Run object detection\n",
     "    results = model.detect([image], verbose=0)\n",
     "    r = results[0]\n",
-    "    # Convert prediction to sementic mask\n",
-    "    result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\\\n",
-    "    if r['class_ids'].size != 0 else np.zeros((image.shape[0], image.shape[1]))\n",
+    "    \n",
+    "    if np.argmax(r['tumor_probs']) == 1 and r['class_ids'].size != 0:\n",
+    "        result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\n",
+    "    else:\n",
+    "        result_sementic = np.zeros((image.shape[0], image.shape[1]))\n",
+    "    \n",
+    "#     # Convert prediction to sementic mask\n",
+    "#     result_sementic = prediction_2_sementic(r['masks'], r['class_ids'], r['scores'])\\\n",
+    "#     if r['class_ids'].size != 0  else np.zeros((image.shape[0], image.shape[1]))\n",
+    "\n",
     "    # Compute confusion matrix\n",
     "    c_matrix = confusion_matrix(np.ravel(\\\n",
     "                                gt_sementic_mask['ATmask'][height_crop[0] : height_crop[1], \\\n",
@@ -351,19 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 38901955.   1836547.   8672610.   2166310.]\n",
+      "[[ 44912149.   1833950.   3924181.    907142.]\n",
       " [  1010767.  11031535.   1807173.    313033.]\n",
       " [  2516889.    628617.  31208719.     84748.]\n",
       " [   275376.    270179.    181636.   7097234.]]\n",
-      "mIOU:  0.682612452359 \n",
-      "IOU: [0.7024491890225385, 0.65283656483892538, 0.69198332023366893, 0.68318073534275736]\n"
+      "mIOU:  0.753683236503 \n",
+      "IOU: [0.81097473487667693, 0.65293691352612993, 0.77341265900744405, 0.77740863860157372]\n"
      ]
     }
    ],
@@ -375,7 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  6.45269468e-38   1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r['tumor_probs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -387,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -412,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -425,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
